data validation added

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -247,8 +247,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "3aa1f5d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: xgboost in c:\\mlproject\\venv\\lib\\site-packages (2.1.2)\n",
+      "Requirement already satisfied: numpy in c:\\mlproject\\venv\\lib\\site-packages (from xgboost) (1.24.4)\n",
+      "Requirement already satisfied: scipy in c:\\mlproject\\venv\\lib\\site-packages (from xgboost) (1.10.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "180d8131",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting lightgbm\n",
+      "  Downloading lightgbm-4.6.0-py3-none-win_amd64.whl.metadata (17 kB)\n",
+      "Requirement already satisfied: numpy>=1.17.0 in c:\\mlproject\\venv\\lib\\site-packages (from lightgbm) (1.24.4)\n",
+      "Requirement already satisfied: scipy in c:\\mlproject\\venv\\lib\\site-packages (from lightgbm) (1.10.1)\n",
+      "Downloading lightgbm-4.6.0-py3-none-win_amd64.whl (1.5 MB)\n",
+      "   ---------------------------------------- 0.0/1.5 MB ? eta -:--:--\n",
+      "   ------------------------------------ --- 1.3/1.5 MB 6.7 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 1.5/1.5 MB 6.4 MB/s eta 0:00:00\n",
+      "Installing collected packages: lightgbm\n",
+      "Successfully installed lightgbm-4.6.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install lightgbm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9e49cd7",
    "metadata": {},
    "outputs": [],
    "source": []
