Data Transformation added

--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "8202c2e7",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "4                 0.55                         Y                           4  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "6407e348",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "38522aec",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "506cb37e",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
        "max                     30.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "c6928680",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "[895 rows x 12 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "327abfc0",
    "metadata": {},
    "outputs": [
@@ -766,7 +766,7 @@
        "Name: person_emp_length, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data2= data.fillna(data.mean(numeric_only=True))"
+    "data= data.fillna(data.mean(numeric_only=True))"
    ]
   },
   {
@@ -815,7 +815,7 @@
     }
    ],
    "source": [
-    "data2.isnull().sum()"
+    "data.isnull().sum()"
    ]
   },
   {
@@ -836,7 +836,7 @@
     }
    ],
    "source": [
-    "data2.shape"
+    "data.shape"
    ]
   },
   {
@@ -861,12 +861,12 @@
     }
    ],
    "source": [
-    "data2.columns"
+    "data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "27829523",
    "metadata": {},
    "outputs": [],
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "250e5bbf",
    "metadata": {},
    "outputs": [],
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "ce9f0571",
    "metadata": {},
    "outputs": [],
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "ddfe4230",
    "metadata": {},
    "outputs": [],
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "273d5ff1",
    "metadata": {},
    "outputs": [],
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "1ea005ed",
    "metadata": {},
    "outputs": [
@@ -993,11 +993,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-09-06 18:17:34,799: INFO: common: yaml file:config\\config.yaml loaded successfully]\n",
-      "[2025-09-06 18:17:34,801: INFO: common: yaml file:params.yaml loaded successfully]\n",
-      "[2025-09-06 18:17:34,803: INFO: common: yaml file:schema.yaml loaded successfully]\n",
-      "[2025-09-06 18:17:34,803: INFO: common: created directory at:artifacts]\n",
-      "[2025-09-06 18:17:34,803: INFO: common: created directory at:artifacts/data_validation]\n"
+      "[2025-09-06 18:45:25,358: INFO: common: yaml file:config\\config.yaml loaded successfully]\n",
+      "[2025-09-06 18:45:25,359: INFO: common: yaml file:params.yaml loaded successfully]\n",
+      "[2025-09-06 18:45:25,361: INFO: common: yaml file:schema.yaml loaded successfully]\n",
+      "[2025-09-06 18:45:25,363: INFO: common: created directory at:artifacts]\n",
+      "[2025-09-06 18:45:25,363: INFO: common: created directory at:artifacts/data_validation]\n"
      ]
     }
    ],
