model trainer added

--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -129,13 +129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c3932a60",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from src.mlProject.utils._init_ import logger"
+    "from src.mlProject.utils._init_ import logger\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd"
    ]
   },
   {
